[package]
name = "tokio-schannel"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/tokio-schannel"
documentation = "https://github.com/youyuanwu/tokio-schannel"
description = """
An implementation of TLS streams for Tokio backed by Schannel
"""
categories = ["web-programming", "network-programming"]
keywords = ["tls"]
readme = "README.md"

[dependencies]
schannel = "0.1"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "time", "macros"] }